Version 0.99.2 (v1.0 release candidate 2)

   - Moved development to Python3.7
   - Fully merged process-refactor branch
   - Updated library dependencies
   - Added an interface to evolve and interact with the network, which means that
     things compose more cleanly
   - Removed a lot of unnecessary parameter-passing after the refactoring, including
     simplifying event functions and compartment management
   - Added posting of repeated events
   - Added cookbook article on monitoring processes

Version 0.99.1 (v1.0 release candidate 1) 2019-04-11

   - Added SIRS model of partial-in-time immunity
   - Seperated process from dynamics
   - Fixed rates
   - Added cookbook of recipes for use

Version 0.5.1 2018-07-27

   - Fixed bug in the event selection routine for Gillespie dynamics
   - Added shuffling of events to avoid anomalies in event selection
   - Syntax changes to be Python3 compatible
   - Made test/CompartmentedDynamicsTest a mixin to avoid incorrect test calls
   - Introduced nose and tox for testing against multiple Python versions
   - Changed compartmented models to return a flat dict of results with just
     the final sizes of each compartment
   - Changed documentation to a more tutorial format
   
Version 0.4.2 2018-03-12

   - Maintenance release to fix compatibility with NetworkX 2.1

Version 0.4.1 2018-03-06

   - Upgraded to match new version of NetworkX
   - Move to slightly better build system
   - Refactored network setup to work better with epyc's distributed
     computations

Version 0.3.1 2017-08-16

   - Added a reset() method to compartmented models to allow them to
     be built repeatedly
   - Gave StochasticDynamics.eventRateDistribution() a default implemntation
   - Added CompartmentedModel.build() as an abstract method, just so
     we could add documentation for it
   - Fixed a few minor issues
   
Version 0.3.0 2017-06-28

   - Refactored synchronous dynamics to be completely independent of models