@@ -1,31 +1,6 @@
-backports-abc==0.5
-backports.shutil-get-terminal-size==1.0.0
-decorator==4.4.0
-dill==0.2.9
-enum34==1.1.6
-epyc==0.15.1
-ipykernel==4.10.0
-ipyparallel==6.2.3
-ipython==5.8.0
-ipython-genutils==0.2.0
-jupyter-client==5.2.4
-jupyter-core==4.4.0
-networkx==2.2
-numpy==1.16.2
-pandas==0.24.2
-pathlib2==2.3.3
-pexpect==4.7.0
-pickleshare==0.7.5
-prompt-toolkit==1.0.15
-ptyprocess==0.6.0
-Pygments==2.3.1
-python-dateutil==2.8.0
-pytz==2019.1
-pyzmq==18.0.1
-scandir==1.10.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.12.0
-tornado==5.1.1
-traitlets==4.3.2
-wcwidth==0.1.7
+networkx
+epyc
+pandas
+future
+six
+numpy
